Fix overflow issue

--- a/app/feed/feed.module.scss
+++ b/app/feed/feed.module.scss
@@ -100,7 +100,7 @@
     position: sticky;
     padding-top: 10px;
     top: 20px;
-    height: 0;
+    height: fit-content;
   }
 
   .github {
